--- a/style.css
+++ b/style.css
@@ -232,3 +232,35 @@
     font-weight: 700;
 }
 
+
+/* section2 */
+.section2{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 30px;
+}
+
+.section2__text{
+    font-size: 400;
+    font-weight: 32px;
+}
+
+.section2__paragrf{
+    font-size: 15px;
+    font-weight: 400;
+    color: #000000;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.section2__btn{
+    padding: 7px 16px;
+    background-color: #FF4A32;
+    border: none;
+    border-radius: 50px;
+    color: white;
+    font-size: 15px;
+    font-weight: 400;
+}
+
