--- a/style.css
+++ b/style.css
@@ -266,3 +266,11 @@
     font-weight: 400;
 }
 
+
+/* images */
+.images{
+    width: 100%;
+    height: 480px;
+    display: flex;
+    align-items: center;
+}
