--- a/style.css
+++ b/style.css
@@ -306,3 +306,31 @@
     font-weight: 400;
     color: white;
 }
+
+/* cards */
+.cards{
+    width: 100%;
+    height: 300px;
+    background-color: #000000;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.cards__card{
+    text-align: center;
+}
+
+.cards__card--text{
+    font-size: 31px;
+    font-weight: 700;
+    color: white;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.cards__card--paragrf{
+    font-size: 15px;
+    font-weight: 400;
+    color: white;
+}
